Update install/README.md